css fixes, fixed 3rd tab not showing

--- a/css/default.css
+++ b/css/default.css
@@ -325,25 +325,26 @@ li:last-child {
     border-radius:3px;
 }
 
-.show-job-colors .가루다 .bar-back
-.show-job-colors .타이탄 .bar-back,
-.show-job-colors .이프리트 .bar-back,
-.show-job-colors .카벙클 .bar-back
+.show-job-colors .garuda .bar-back
+.show-job-colors .titan .bar-back,
+.show-job-colors .ifrit .bar-back,
+.show-job-colors .carbuncle .bar-back
 {
 background: -webkit-linear-gradient(top,  #2D9600 0%,#2D9600 80%,#E0A030 80%,#f6da6a 100%);
 }
 
-.show-job-colors .셀레네 .bar-back,
-.show-job-colors .에오스 .bar-back
+.show-job-colors .selene .bar-back,
+.show-job-colors .eos .bar-back
 {
 background: -webkit-linear-gradient(top,  #4442a8 0%,#4442a8 80%,#E0A030 80%,#f6da6a 100%);
 }
 
-.show-job-colors .리미트 .bar-back
+.show-job-colors .limit .bar-back,
+.show-job-colors .limibreak .bar-back
 {
     background-color:#FF6A00;
 }
-.show-job-colors .초코보 .bar-back {
+.show-job-colors .chocobo .bar-back {
     background-color: #f6da6a;
 }
 
@@ -365,66 +366,67 @@ background: -webkit-linear-gradient(top,  #4442a8 0%,#4442a8 80%,#E0A030 80%,#f6
     background-color:rgb(232,255,254);
 }
 
-.show-job-colors .격투사 .bar, .show-job-colors .몽크 .bar {
+.show-job-colors .pgl .bar, .show-job-colors .mnk .bar {
 background: -webkit-linear-gradient(top,  #b38915 0%,#b38915 80%,#720000 80%,#C00000 100%);
 }
 
-.show-job-colors .비술사 .bar, .show-job-colors .소환사 .bar {
+.show-job-colors .acn .bar, .show-job-colors .smn .bar {
 background: -webkit-linear-gradient(top,  #2D9600 0%,#2D9600 80%,#720000 80%,#C00000 100%);
 }
 
-.show-job-colors .창술사 .bar, .show-job-colors .용기사 .bar {
+.show-job-colors .lnc .bar, .show-job-colors .drg .bar {
 background: -webkit-linear-gradient(top,  #3752d8 0%,#3752d8 80%,#720000 80%,#C00000 100%);
 }
 
-.show-job-colors .환술사 .bar, .show-job-colors .백마도사 .bar {
+.show-job-colors .cnj .bar, .show-job-colors .whm .bar {
 background: -webkit-linear-gradient(top,  #767676 0%,#767676 80%,#007200 80%,#00C000 100%);
 }
 
-.show-job-colors .주술사 .bar, .show-job-colors .흑마도사 .bar {
+.show-job-colors .thm .bar, .show-job-colors .blm .bar {
 background: -webkit-linear-gradient(top,  #674598 0%,#674598 80%,#720000 80%,#C00000 100%);
 }
 
-.show-job-colors .닌자 .bar, .show-job-colors .쌍검사 .bar {
+.show-job-colors .nin .bar, .show-job-colors .rog .bar {
 background: -webkit-linear-gradient(top,  #ee2e48 0%,#ee2e48 80%,#720000 80%,#C00000 100%);
 }
 
-.show-job-colors .학자 .bar {
+.show-job-colors .sch .bar {
 background: -webkit-linear-gradient(top,  #4442a8 0%,#4442a8 80%,#007200 80%,#00C000 100%);
 }
 
-.show-job-colors .궁술사 .bar, .show-job-colors .음유시인 .bar {
+.show-job-colors .arc .bar, .show-job-colors .brd .bar {
 background: -webkit-linear-gradient(top,  #adc551 0%,#adc551 80%,#720000 80%,#C00000 100%);
 }
 
-.show-job-colors .검술사 .bar, .show-job-colors .나이트 .bar {
+.show-job-colors .gld .bar, .show-job-colors .pld .bar {
 background: -webkit-linear-gradient(top,  #7b9aa2 0%,#7b9aa2 80%,#000072 80%,#0000C0 100%);
 }
 
-.show-job-colors .도끼술사 .bar, .show-job-colors .전사 .bar {
+.show-job-colors .mrd .bar, .show-job-colors .war .bar {
 background: -webkit-linear-gradient(top,  #a91a16 0%,#a91a16 80%,#000072 80%,#0000C0 100%);
 }
 
-.show-job-colors .리미트 .bar,
-.show-job-colors .초코보 .bar,
-.show-job-colors .카벙클 .bar,
-.show-job-colors .가루다 .bar,
-.show-job-colors .타이탄 .bar,
-.show-job-colors .이프리트 .bar,
-.show-job-colors .셀레네 .bar,
-.show-job-colors .에오스 .bar {
+.show-job-colors .limit .bar,
+.show-job-colors .limitbreak .bar,
+.show-job-colors .chocobo .bar,
+.show-job-colors .carbuncle .bar,
+.show-job-colors .garuda .bar,
+.show-job-colors .titan .bar,
+.show-job-colors .ifrit .bar,
+.show-job-colors .selene .bar,
+.show-job-colors .eos .bar {
     background-color: #998842;
 }
-.show-job-colors .점성술사 .bar {
+.show-job-colors .ast .bar {
 background: -webkit-linear-gradient(top,  #DB8043 0%,#DB8043 80%,#007200 80%,#00C000 100%);
 }
-.show-job-colors .기공사 .bar {
+.show-job-colors .mch .bar {
 background: -webkit-linear-gradient(top,  #6bcec2 0%,#6bcec2 80%,#720000 80%,#C00000 100%);
 }
-.show-job-colors .포탑 .bar {
+.show-job-colors .turret .bar {
 background: -webkit-linear-gradient(top,  #6bcec2 0%,#6bcec2 80%,#E0A030 80%,#f6da6a 100%);
 }
-.show-job-colors .암흑기사 .bar {
+.show-job-colors .drk .bar {
 background: -webkit-linear-gradient(top,  #4a2829 0%,#4a2829 80%,#000072 80%,#0000C0 100%);
 }
 
